--- a/Mydaily/app/build.gradle
+++ b/Mydaily/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.android.volley:volley:+'
+    compile 'com.github.bumptech.glide:glide:+'
 }
